
parity 1.2.7
------------

parity.runtime: greatly improve exception handling, both for SEH and (especially) C++

parity.runtime: introduce new entry point wrapper that wraps application code into the new exception handling

Add required code to generate "better" entry point code that forwards initialization to the new PcrtCxxEhStartup

parity 1.2.6
------------

parity.runtime: Terminate process on fatal exceptions caught by parity.

parity.runtime: Stop backtrace generation on obviously invalid stack pointer.

parity.runtime: Stop backtrace generation at a depth of 100.

parity.runtime: Reorder contents of core file, to be more readable hopefully.

Stop matching ".a.c" or "x.a.c" and similar filenames as ".a"-argument.


parity 1.2.5
------------

Add support for legacy Visual Studio 2005, but with static runtime only.

parity.ms.cl.exe, parity.ms.link.exe: Support '@filename' commandline argument, for 'filename' containing additional commandline arguments.

parity.ms.cl.exe, parity.ms.link.exe: Accept '/EH' (exception handling) and '/GR' (runtime types) commandline argument.

parity.ms.cl.exe: Accept /LD and /LDd instead of /DLL to link a dll.

parity.ms.cl.exe: Wrap VC-headers without _POSIX_ being defined.

Ignore case when searching for implicit libraries (/DEFAULTLIB directive), using lowercase by "C" locale.

Identify duplicate /DEFAULTLIB directives by the directive value, not the complete resolved library filename. Have seen this improving link speed by a factor of 10 here.

Fix handling of /NODEFAULTLIB directive to actually ignore specified default libraries.

Dynamically load procedures for exception handling from kernel32.dll to allow binaries built with up to Visual Studio 2005 to actually run on Windows NT, where those procedures are missing.

List loaded modules to core-file when available (not on Windows NT).

Reorder ReleaseNotes to have most recent version first.


parity 1.2.4
------------
