@@ -20,6 +20,7 @@
 *                                                                *
 \****************************************************************/
 
+#include "time.h"
 #include "sys/time.h"
 #include "sys/timeb.h"
 #include "sys/socket.h"
@@ -35,4 +36,19 @@ int gettimeofday(struct timeval *tv, void* unused)
     tv->tv_sec  = (long)tb.time;
     tv->tv_usec = (long)tb.millitm;
     return(0);
+}
+
+extern size_t strftime(char*,size_t,const char*,const struct tm*);
+
+static struct tm zero_time = {0,0,0,0,0,0,0,0,0}; 
+static struct tm default_time = {0,0,0,1,0,70,0,0,0};
+
+#undef strftime
+size_t _pcrt_strftime_safe(char* buf, size_t size, const char* fmt, const struct tm* time) {
+	if(time == NULL || memcmp(time, &zero_time, sizeof(struct tm)) == 0) {
+        return strftime(buf, size, fmt, &default_time);
+    } else {
+        // assume non zero date to be valid.
+        return strftime(buf, size, fmt, time);
+    }  	
 }
